# computational-statistics-1

./: README.md  a1_data.csv  a1_data_clustered.csv  assignment01.ipynb  ga.ipynb  hyperopt.db  pyproject.toml  requirements.txt  sortnregress.ipynb
algorithm/: genetic_algorithm.py  instantiation.py  main.py  utilities.py
