[tool.poetry]
name = "computational-statistics-1"
version = "0.1.0"
description = ""
authors = ["David Pomerenke <46022183+davidpomerenke@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "computational_statistics_1"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
networkx = "^3.0"
scikit-learn = "^1.2.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
